--- a/frontend/src/css/Upload.css
+++ b/frontend/src/css/Upload.css
@@ -1,16 +1,15 @@
 .Upload {
-    flex:1;
-    margin-left: 10px;
+  margin-left: 10px;
 }
 
 .upload {
-    margin-top: 10px;
-    width: 30px;
-    height: 30px;
+  margin-top: 10px;
+  width: 30px;
+  height: 30px;
 }
 
 .upload:hover {
-    cursor: pointer;
-    transform: scale(1.25,1.25);
-    transition: ease-in-out;
+  cursor: pointer;
+  transform: scale(1.25, 1.25);
+  transition: ease-in-out;
 }
