--- a/frontend/src/css/homepage.css
+++ b/frontend/src/css/homepage.css
@@ -2,6 +2,7 @@
   /*     background-image: url('../images/newspaper2.jpg');
     background-size: cover; */
   min-height: 100vh;
+  font-family: 'Alegreya SC', serif;
 }
 .container {
   margin: 20px 50px;
@@ -10,6 +11,9 @@
 }
 
 h1 {
-  font-family: 'Alegreya SC', serif;
   text-align: center;
+}
+
+h1 a {
+  font-size: 80px;
 }
