--- a/frontend/src/css/Result.css
+++ b/frontend/src/css/Result.css
@@ -1,8 +1,8 @@
 .ant-card-head {
-    border: 2px solid orange;
-    box-shadow: 2px 4px 8px orange;
+    border: 2px solid blue;
+    box-shadow: 2px 4px 8px blue;
 }
 
 .ant-card-body {
-    border-top: 2px solid orange;
+    border-top: 2px solid blue;
 }
