--- a/frontend/src/css/Result.css
+++ b/frontend/src/css/Result.css
@@ -1,11 +1,8 @@
-.item {
+.result > .ant-card-body > .item{
+	height: 200px;
 	color: black;
 	margin-top: 10px;
 	display: block;
-  }
-
-.ant-card-body {
-	height: 200px;
 }
 
 .ant-col-20 {
