--- a/frontend/src/css/Search.css
+++ b/frontend/src/css/Search.css
@@ -6,6 +6,27 @@
 	margin-left: 10px;
 }
 
+.search-daterange {
+	width: 100% !important;
+	display: flex !important;
+	margin-bottom: 20px !important;
+	margin-top: 5px !important;
+} 
+
+.daterange-title {
+	width: 20%;
+}
+
+@media only screen and (max-width: 500px) {
+	.search-daterange {
+		flex-direction: column;
+	}
+
+	.daterange-title {
+		width: 100%;
+	}
+}
+
 .result {
 	height: fit-content;
 }
