--- a/frontend/src/css/Result.css
+++ b/frontend/src/css/Result.css
@@ -1,35 +1,11 @@
-.result > .ant-card-body > .item{
-	height: 200px;
-	color: black;
-	margin-top: 10px;
-	display: block;
+.card-container {
 }
 
-.ant-col-20 {
-	padding-right: 10px;
-}
-
-.ant-col > h2 {
-	font-size: 24px;
-	font-weight: 400px;
-}
-
-.ant-col > h3 {
-	font-size: 12px;
-	color: grey;
-}
-
-.ant-col > p {
-	font-size: 18px;
-	color: black;
-}
-
-.ant-col-4 {
-	position: relative;
-}
-
-.ant-col-4 > img {
-	position: absolute;
-	display: block;
-	height: 95%;
+.card-content {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  font-size: 14px;
+  display: -webkit-box;
+  -webkit-line-clamp: 5 /* number of lines to show */;
+  -webkit-box-orient: vertical;
 }
