--- a/frontend/src/css/Search.css
+++ b/frontend/src/css/Search.css
@@ -1,36 +1,36 @@
 .searchOption {
-	margin-top: 5px;
+  margin-top: 5px;
 }
 
 .searchOption .ant-radio-group {
-	margin-left: 10px;
+  margin-left: 10px;
 }
 
-.search-daterange {
-	width: 100% !important;
-	display: flex !important;
-	margin-bottom: 20px !important;
-	margin-top: 5px !important;
-} 
+.search-dateRange {
+  width: 100% !important;
+  display: flex !important;
+  margin-bottom: 20px !important;
+  margin-top: 5px !important;
+}
 
-.daterange-title {
-	width: 20%;
+.dateRange-title {
+  width: 20%;
 }
 
 @media only screen and (max-width: 500px) {
-	.search-daterange {
-		flex-direction: column;
-	}
+  .search-dateRange {
+    flex-direction: column;
+  }
 
-	.daterange-title {
-		width: 100%;
-	}
+  .dateRange-title {
+    width: 100%;
+  }
 }
 
 .result {
-	height: fit-content;
+  height: fit-content;
 }
 
 .result > .ant-card-body {
-	padding: 0;
+  padding: 0;
 }
