--- a/frontend/src/css/Result.css
+++ b/frontend/src/css/Result.css
@@ -1,4 +1,5 @@
-.card-container {
+.list-result {
+  margin-top: 25px !important;
 }
 
 .card-content {
@@ -8,4 +9,10 @@
   display: -webkit-box;
   -webkit-line-clamp: 5 /* number of lines to show */;
   -webkit-box-orient: vertical;
+}
+
+.ant-list-item-meta-title {
+  font-weight: bold;
+  font-size: 20px !important;
+  margin-bottom: 10px !important;
 }
