--- a/frontend/src/css/Search.css
+++ b/frontend/src/css/Search.css
@@ -21,8 +21,8 @@ h3 {
 }
 
 .datePicker {
-  width: 100%;
   height: 45px;
+  width: 100%;
   margin-top: auto !important;
 }
 
@@ -39,3 +39,22 @@ h3 {
   margin-left: 0 !important;
 }
 
+.ant-input:focus, .ant-input:hover, .ant-input-focused, .ant-picker:hover, .ant-picker-focused {
+  border-color: #d9d9d9 !important;
+  box-shadow: none !important;
+}
+
+.searchBar .ant-input-suffix:hover {
+  pointer-events: none;
+}
+
+.search-button-container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid #d9d9d9;
+  background-color: #fff;
+  cursor: pointer;
+}
