--- a/frontend/src/css/create.css
+++ b/frontend/src/css/create.css
@@ -15,3 +15,9 @@
   flex-direction: column;
   justify-content: space-between;
 }
+
+#cropped-container {
+  margin-top: 10px;
+  overflow: auto;
+  overflow-y: scroll;
+}
